--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,9 +88,50 @@ a {
   margin-top: 8%;
 }
 
-/* about me header then pic on left side, paragraph on right */
 
-/* life dream aside on right of about me */
+#my-work {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+#my-work h2 {
+  font-size: 2.5rem;
+  color: var(--blue);
+}
+
+.project1 {
+display: flex;
+flex-wrap: wrap;
+
+}
+
+.project1 h3 {
+color: var(--green);
+}
+
+.project1 img {
+  flex-wrap: wrap;
+  width: auto;
+  height: auto;
+  max-width: 60%;
+}
+
+.project {
+  display: flex;
+  flex-wrap: wrap;
+  
+  }
+  
+  .project h3 {
+  color: var(--green);
+  }
+  
+  .project img {
+    max-width: 40%;
+  }'
+
+
 
 /* 
 ## MY WORK SECTION ## 
