--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/* !! NAV BAR !! */
+
 .nav-bar {
   display: flex;
   flex-direction: row;
@@ -31,6 +33,9 @@ a {
   color: var(--blue);
 }
 
+/*  !! MAIN CONTENT !! */
+
+/* ## ABOUT ME SECTION ## */
 #about-me {
   display: flex;
   flex-wrap: wrap;
@@ -39,11 +44,9 @@ a {
   border-bottom: 2px solid var(--pink);
 }
 
+/* My name & picture */
 .div-left {
-  display: flex;
-  flex-wrap: wrap;
   max-width: 50%;
-  align-content: center;
   padding: 0 0 3% 3%;
 }
 
@@ -52,10 +55,10 @@ a {
   color: var(--blue);
   max-width: 100%;
   margin-bottom: 4%;
+  text-align: center;
 }
 
 .div-left img {
-  flex-wrap: wrap;
   height: auto;
   width: auto;
   max-width: 100%;
@@ -63,6 +66,7 @@ a {
   padding: 4% 4%;
 }
 
+/* About me heading & paragraph (inclu. fun fact) */
 .div-right {
   max-width: 50%;
   padding: 0 3% 0 3%;
@@ -88,7 +92,7 @@ a {
   margin-top: 8%;
 }
 
-
+/*  ## MY WORK SECTION ## */
 #my-work {
   display: flex;
   flex-wrap: wrap;
@@ -98,45 +102,65 @@ a {
 #my-work h2 {
   font-size: 2.5rem;
   color: var(--blue);
+  text-align: center;
+  margin: 3% 0 3% 0;
 }
 
+/*  Glass Animals */
 .project1 {
-display: flex;
-flex-wrap: wrap;
-
+  max-width: 100%;
+  margin: 0 3% 0% 3%;
 }
 
 .project1 h3 {
-color: var(--green);
+  background-color: var(--blue);
+  color: var(--light-pink);
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
 }
 
 .project1 img {
-  flex-wrap: wrap;
   width: auto;
   height: auto;
-  max-width: 60%;
+  max-width: 100%;
+  padding: 1% 1%;
+  border: 8px solid var(--blue);
+  margin-bottom: 1%;
 }
 
+.project1 p {
+  font-size: 1.25rem;
+  text-align: center;
+}
+
+/* Horiseon & placeholder */
 .project {
-  display: flex;
-  flex-wrap: wrap;
-  
-  }
-  
-  .project h3 {
-  color: var(--green);
-  }
-  
-  .project img {
-    max-width: 40%;
-  }'
+  max-width: 50%;
+  margin-top: 5%;
+}
 
+.project h3 {
+  background-color: var(--blue);
+  color: var(--light-pink);
+  font-size: 1.7rem;
+  font-weight: bold;
+  text-align: center;
+}
 
+.project img {
+  height: auto;
+  width: auto;
+  max-width: 100%;
+  padding: 2% 2%;
+  border: 5px solid var(--blue);
+}
+
+.project p {
+}
 
 /* 
 ## MY WORK SECTION ## 
-
-projects 1-3 go from left to right
 
 project 1 have largest pic
 
