--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,14 +45,14 @@ a {
 
 /* My name & picture */
 .div-left {
-  max-width: 50%;
+  width: 50%;
   padding: 0 0 3% 3%;
 }
 
 .div-left h1 {
   font-size: 4rem;
   color: var(--blue);
-  max-width: 100%;
+  width: 100%;
   margin-bottom: 4%;
   text-align: center;
 }
@@ -60,14 +60,14 @@ a {
 .div-left img {
   height: auto;
   width: auto;
-  max-width: 100%;
+  width: 100%;
   border: 10px solid var(--green);
   padding: 4% 4%;
 }
 
 /* About me heading & paragraph (inclu. fun fact) */
 .div-right {
-  max-width: 50%;
+  width: 50%;
   padding: 0 3% 0 3%;
 }
 
@@ -108,7 +108,7 @@ a {
 
 /*  Glass Animals */
 .project1 {
-  max-width: 100%;
+  width: 100%;
   margin: 0 3% 0% 3%;
 }
 
@@ -121,9 +121,8 @@ a {
 }
 
 .project1 img {
-  width: auto;
   height: auto;
-  max-width: 100%;
+  width: 100%;
   padding: 1% 1%;
   border: 8px solid var(--blue);
   margin-bottom: 1%;
@@ -136,7 +135,7 @@ a {
 
 /* Horiseon & placeholder */
 .project {
-  max-width: 50%;
+  width: 50%;
   margin-top: 5%;
 }
 
@@ -150,8 +149,7 @@ a {
 
 .project img {
   height: auto;
-  width: auto;
-  max-width: 100%;
+  width: 100%;
   padding: 2% 2%;
   border: 5px solid var(--blue);
 }
@@ -168,6 +166,7 @@ a {
 .contact {
   display: flex;
   flex-wrap: wrap;
+  border-bottom: 2px solid var(--pink);
 }
 
 #contact-me {
@@ -211,7 +210,7 @@ button {
 /* !! ASIDE CONTENT !! */
 
 .aside {
-  max-width: 25%;
+width: 25%;
 }
 
 .aside h3 {
@@ -228,25 +227,19 @@ button {
   width: 100%;
   text-align: center;
   text-decoration: none;
-
+}
+/* ## FOOTER CONTENT ## */
+footer {
+  color: var(--green);
+  font-size: 1.1rem;
+  font-weight: bold;
+  text-align: center;
+  margin: 2% 0 2% 0;
 }
 
-/* MEDIA QUEREY changes */
-
-/* tablet (small desktop): 
-
-about me - paragraph now below pic
-
-my work - project 1 (left & largest) with description below, project 2 & 3 pic on left with descrption on right & projects stacked
-
-social media links- vertically listed
-*/
-
-/* phone/mobile:
-
-nav - vertically stacked
-
-evrything else stacked
-about me, pic, paragraph, dream, my work, projects, pic, description, contact me, sm links (2 then 1)
-
-*/
+@media screen and (max-width: 600px) {
+   .div-left, .div-right, .project1, .project, #contact-me, .aside {
+    width: 100%;
+    margin: 0;
+  }
+}
