added screenshot of portfolio to directory, added more content to README, fixed some accidental deletions from CSS file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,8 +28,8 @@ body {
 }
 
 .nav-bar li:hover {
-  opacity: .5;
-  }
+  opacity: 0.5;
+}
 
 a {
   text-decoration: none;
@@ -49,14 +49,14 @@ a {
 
 /* My name & picture */
 .div-left {
-  width: 50%;
+  max-width: 50%;
   padding: 0 0 3% 3%;
 }
 
 .div-left h1 {
   font-size: 4rem;
   color: var(--blue);
-  width: 100%;
+  max-width: 100%;
   margin-bottom: 4%;
   text-align: center;
 }
@@ -64,14 +64,14 @@ a {
 .div-left img {
   height: auto;
   width: auto;
-  width: 100%;
+  max-width: 100%;
   border: 10px solid var(--green);
   padding: 4% 4%;
 }
 
 /* About me heading & paragraph (inclu. fun fact) */
 .div-right {
-  width: 50%;
+  max-width: 50%;
   padding: 0 3% 0 3%;
 }
 
@@ -112,7 +112,7 @@ a {
 
 /*  Glass Animals */
 .project1 {
-  width: 100%;
+  max-width: 100%;
   margin: 0 3% 0% 3%;
 }
 
@@ -125,8 +125,9 @@ a {
 }
 
 .project1 img {
+  width: auto;
   height: auto;
-  width: 100%;
+  max-width: 100%;
   padding: 1% 1%;
   border: 8px solid var(--blue);
   margin-bottom: 1%;
@@ -139,7 +140,7 @@ a {
 
 /* Horiseon & placeholder */
 .project {
-  width: 50%;
+  max-width: 50%;
   margin-top: 5%;
 }
 
@@ -153,7 +154,8 @@ a {
 
 .project img {
   height: auto;
-  width: 100%;
+  width: auto;
+  max-width: 100%;
   padding: 2% 2%;
   border: 5px solid var(--blue);
 }
@@ -161,9 +163,8 @@ a {
 .project p {
 }
 
-
 #my-work img:hover {
-opacity: .5;
+  opacity: 0.5;
 }
 
 /* ## CONTACT SECTION ## */
@@ -185,13 +186,14 @@ opacity: .5;
 }
 
 .label {
-font-size: 1.3rem;
-color: var(--blue);
-font-weight: bold;
-margin: 2% 0 2% 0;
+  font-size: 1.3rem;
+  color: var(--blue);
+  font-weight: bold;
+  margin: 2% 0 2% 0;
 }
 
-.text input, .text textarea {
+.text input,
+.text textarea {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.1rem;
   border: 2px solid var(--blue);
@@ -214,7 +216,7 @@ button {
 /* !! ASIDE CONTENT !! */
 
 .aside {
-width: 25%;
+  max-width: 25%;
 }
 
 .aside h3 {
@@ -242,7 +244,13 @@ footer {
 }
 
 @media screen and (max-width: 600px) {
-   .div-left, .div-right, .project1, .project, #contact-me, .aside {
+  .nav-bar,
+  .div-left,
+  .div-right,
+  .project1,
+  .project,
+  #contact-me,
+  .aside {
     width: 100%;
     margin: 0;
   }
